--- a/h2o.conf
+++ b/h2o.conf
@@ -31,6 +31,9 @@ hosts:
         key-file: /etc/letsencrypt/live/neec.ooo/privkey.pem
     paths:
       "/":
+        mruby.handler: |
+          require "htpasswd.rb"
+          Htpasswd.new("/etc/h2o/.htpasswd", "realm-name")
         proxy.reverse.url: http://dios-application:3000/
 
   # web server
