静的ファイルとWebServerと分離させる

--- a/h2o.conf
+++ b/h2o.conf
@@ -36,6 +36,23 @@ hosts:
           Htpasswd.new("/etc/h2o/.htpasswd", "realm-name")
         proxy.reverse.url: http://dios-application:3000/
 
+  # static
+  "static.neec.ooo:80":
+    listen:
+      port: 80
+    paths:
+      "/":
+        redirect: https://static.neec.ooo/
+  "static.neec.ooo:443":
+    listen:
+      port: 443
+      ssl:
+        certificate-file: /etc/letsencrypt/live/neec.ooo/fullchain.pem
+        key-file: /etc/letsencrypt/live/neec.ooo/privkey.pem
+    paths:
+      "/":
+        file.dir: /public
+
   # web server
   "neec.ooo:80":
     listen:
@@ -51,4 +68,4 @@ hosts:
         key-file: /etc/letsencrypt/live/neec.ooo/privkey.pem
     paths:
       "/":
-        file.dir: /public
+        proxy.reverse.url: http://web-application:8000/
