yamlの継承とか使えるっぽい
すてき

--- a/h2o.conf
+++ b/h2o.conf
@@ -1,13 +1,13 @@
 hosts:
   # api
   "api.neec.ooo:80":
-    listen:
+    listen: &default_http
       port: 80
     paths:
       "/":
         redirect: https://api.neec.ooo/
   "api.neec.ooo:443":
-    listen:
+    listen: &default_https
       port: 443
       ssl:
         certificate-file: /etc/letsencrypt/live/neec.ooo/fullchain.pem
@@ -18,17 +18,12 @@ hosts:
 
   # admin
   "admin.neec.ooo:80":
-    listen:
-      port: 80
+    listen: *default_http
     paths:
       "/":
         redirect: https://admin.neec.ooo/
   "admin.neec.ooo:443":
-    listen:
-      port: 443
-      ssl:
-        certificate-file: /etc/letsencrypt/live/neec.ooo/fullchain.pem
-        key-file: /etc/letsencrypt/live/neec.ooo/privkey.pem
+    listen: *default_https
     paths:
       "/":
         mruby.handler: |
@@ -38,34 +33,24 @@ hosts:
 
   # static
   "static.neec.ooo:80":
-    listen:
-      port: 80
+    listen: *default_http
     paths:
       "/":
         redirect: https://static.neec.ooo/
   "static.neec.ooo:443":
-    listen:
-      port: 443
-      ssl:
-        certificate-file: /etc/letsencrypt/live/neec.ooo/fullchain.pem
-        key-file: /etc/letsencrypt/live/neec.ooo/privkey.pem
+    listen: *default_https
     paths:
       "/":
         file.dir: /public
 
   # web server
   "neec.ooo:80":
-    listen:
-      port: 80
+    listen: *default_http
     paths:
       "/":
         redirect: https://neec.ooo/
   "neec.ooo:443":
-    listen:
-      port: 443
-      ssl:
-        certificate-file: /etc/letsencrypt/live/neec.ooo/fullchain.pem
-        key-file: /etc/letsencrypt/live/neec.ooo/privkey.pem
+    listen: *default_https
     paths:
       "/":
         proxy.reverse.url: http://web-application:8000/
