WebServerは普通に80にしておく
深い意味はない、なんとなく

--- a/h2o.conf
+++ b/h2o.conf
@@ -55,4 +55,4 @@ hosts:
     listen: *default_https
     paths:
       "/":
-        proxy.reverse.url: http://web-application:8000/
+        proxy.reverse.url: http://web-application/
