CORSの制御はpuertaが実行する

--- a/h2o.conf
+++ b/h2o.conf
@@ -14,6 +14,8 @@ hosts:
       ssl:
         certificate-file: /etc/letsencrypt/live/neec.ooo/fullchain.pem
         key-file: /etc/letsencrypt/live/neec.ooo/privkey.pem
+    # header.add: "Access-Control-Allow-Origin: https://neec.ooo"
+    header.add: "Access-Control-Allow-Origin: *"
     paths:
       "/":
         proxy.reverse.url: http://kong-application:8000/
@@ -41,6 +43,8 @@ hosts:
         redirect: https://static.neec.ooo/
   "static.neec.ooo:443":
     listen: *default_https
+    # header.add: "Access-Control-Allow-Origin: https://neec.ooo"
+    header.add: "Access-Control-Allow-Origin: *"
     paths:
       "/":
         file.dir: /public
