Access-Control-Allow-Headers 設定

--- a/h2o.conf
+++ b/h2o.conf
@@ -14,6 +14,7 @@ hosts:
       ssl:
         certificate-file: /etc/letsencrypt/live/neec.ooo/fullchain.pem
         key-file: /etc/letsencrypt/live/neec.ooo/privkey.pem
+    header.add: "Access-Control-Allow-Methods: GET,POST,OPTIONS"
     # header.add: "Access-Control-Allow-Origin: https://neec.ooo"
     header.add: "Access-Control-Allow-Origin: *"
     paths:
@@ -43,6 +44,7 @@ hosts:
         redirect: https://static.neec.ooo/
   "static.neec.ooo:443":
     listen: *default_https
+    header.add: "Access-Control-Allow-Methods: GET,OPTIONS"
     # header.add: "Access-Control-Allow-Origin: https://neec.ooo"
     header.add: "Access-Control-Allow-Origin: *"
     paths:
