Access-Control-Allow-Headers 設定 (前コミットはMethodsだった)

--- a/h2o.conf
+++ b/h2o.conf
@@ -15,6 +15,7 @@ hosts:
         certificate-file: /etc/letsencrypt/live/neec.ooo/fullchain.pem
         key-file: /etc/letsencrypt/live/neec.ooo/privkey.pem
     header.add: "Access-Control-Allow-Methods: GET,POST,OPTIONS"
+    header.add: "Access-Control-Allow-Headers: *"
     # header.add: "Access-Control-Allow-Origin: https://neec.ooo"
     header.add: "Access-Control-Allow-Origin: *"
     paths:
@@ -45,6 +46,7 @@ hosts:
   "static.neec.ooo:443":
     listen: *default_https
     header.add: "Access-Control-Allow-Methods: GET,OPTIONS"
+    header.add: "Access-Control-Allow-Headers: *"
     # header.add: "Access-Control-Allow-Origin: https://neec.ooo"
     header.add: "Access-Control-Allow-Origin: *"
     paths:
